testsuite/tests/v1/indexing/index_out_of_bounds/test.out
Error: Index out of bounds
   ╭─[ <working-dir>/script.lkql:2:11 ]
   │
 2 │ print(lst[3])
   │           ┬  
   │           ╰── Cannot access index 3 in the value, it is out of bounds
───╯
